force-app/main/default/objects/User/fields/HerokuUser__c.field-meta.xml
<CustomField>
    <fullName>HerokuUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permette all&apos;utente di accedere al sistema Heroku</description>
    <label>Heroku User</label>
    <type>Checkbox</type>
</CustomField>