force-app/main/default/objects/User/fields/LoginADN__c.field-meta.xml
<CustomField>
    <fullName>LoginADN__c</fullName>
    <description>Campo chiesto da Everis per l&apos;integrazione con SIGMA, corrisponde alla concatenazione del FirstName e del LastName separati da un punto.</description>
    <formula>LOWER(FirstName+&apos;.&apos;+LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Login ADN</label>
    <type>Text</type>
</CustomField>