force-app/main/default/objects/User/fields/LoginChannel__c.field-meta.xml
<CustomField>
    <fullName>LoginChannel__c</fullName>
    <description>Indica il canale di riferimento dell&apos;utente</description>
    <label>Canale Login</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetName>HDT_LoginChannel</valueSetName>
    </valueSet>
</CustomField>