force-app/main/default/objects/User/fields/SalesChannel__c.field-meta.xml
<CustomField>
    <fullName>SalesChannel__c</fullName>
    <description>Indica il canale di vendita dell&apos;utente</description>
    <label>Canale Vendita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_SalesChannel</valueSetName>
    </valueSet>
</CustomField>