force-app/main/default/objects/User/fields/Station__c.field-meta.xml
<CustomField>
    <fullName>Station__c</fullName>
    <description>Indica la postazione di riferimento dell&apos;utente</description>
    <label>Postazione</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CreatorGroup__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>HDT_Station</valueSetName>
    </valueSet>
</CustomField>