force-app/main/default/objects/User/fields/UserCompany__c.field-meta.xml
<CustomField>
    <fullName>UserCompany__c</fullName>
    <description>Campo chiesto dal BSN, verrà valorizzato da OIG in fase di Provisioninig</description>
    <label>Società Utenza</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACEGASAPSAMGA SPA</fullName>
            </value>
            <value>
                <fullName>HERA TRADING SRL</fullName>
            </value>
            <value>
                <fullName>ASCOPIAVE ENERGIE SPA</fullName>
            </value>
            <value>
                <fullName>ARESGAS</fullName>
            </value>
            <value>
                <fullName>ALIPLAST IBERIA</fullName>
            </value>
            <value>
                <fullName>HERA COMM SPA</fullName>
            </value>
            <value>
                <fullName>ALIPLAST FRANCE</fullName>
            </value>
            <value>
                <fullName>BLUE META</fullName>
            </value>
            <value>
                <fullName>HERAMBIENTE SPA</fullName>
            </value>
            <value>
                <fullName>HERAMBIENTE SERVIZI INDUSTRIALI SRL</fullName>
            </value>
            <value>
                <fullName>HESTAMBIENTE SRL</fullName>
            </value>
            <value>
                <fullName>HERA COMM SRL</fullName>
            </value>
            <value>
                <fullName>ALIPLAST SPA</fullName>
            </value>
            <value>
                <fullName>BLUE META SPA</fullName>
            </value>
            <value>
                <fullName>FRULLO ENERGIA AMBIENTE SRL</fullName>
            </value>
            <value>
                <fullName>HERA COMM MARCHE SRL</fullName>
            </value>
            <value>
                <fullName>ASA SPA</fullName>
            </value>
            <value>
                <fullName>ETRA ENERGIA SRL</fullName>
            </value>
            <value>
                <fullName>INRETE</fullName>
            </value>
            <value>
                <fullName>HERA SPA</fullName>
            </value>
            <value>
                <fullName>INRETE DISTRIBUZIONE ENERGIA SPA</fullName>
            </value>
            <value>
                <fullName>HERATECH SRL</fullName>
            </value>
            <value>
                <fullName>ASCOTRADE SPA</fullName>
            </value>
            <value>
                <fullName>ALIMPET SRL</fullName>
            </value>
            <value>
                <fullName>ORACLE ITALIA SRL</fullName>
            </value>
            <value>
                <fullName>ACANTHO SPA</fullName>
            </value>
            <value>
                <fullName>HERA LUCE SRL</fullName>
            </value>
            <value>
                <fullName>ALIPLST POLSKA</fullName>
            </value>
            <value>
                <fullName>BLU RANTON</fullName>
            </value>
            <value>
                <fullName>SINERGIE SPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>